--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 body {
     font-family: 'Segoe UI', sans-serif;
   }
+
+  .nav-es {
+  background-color: #1e3c72; /* Ejemplo de color */
+}
+
+.topbar {
+  background-color: #1e3c72, ;
+  height: 30px; /* Puedes ajustar la altura */
+}
   
   .hero {
     background: linear-gradient(to right, #1e3c72, #2a5298);
