--- a/style.css
+++ b/style.css
@@ -3,12 +3,14 @@ body {
   }
 
   .nav-es {
-  background-color: #1e3c72; /* Ejemplo de color */
-}
+  background-color: #1e3c72; 
+  }
+
+
 
 .topbar {
   background-color: #1e3c72, ;
-  height: 30px; /* Puedes ajustar la altura */
+  height: 30px;
 }
   
   .hero {
@@ -20,7 +22,7 @@ body {
     height: 200px;
     object-fit: cover;
   }
-  
+
   .contacto {
     text-align: center;
   }
